Fix style spacing

--- a/src/components/Home/HomeStyles.css
+++ b/src/components/Home/HomeStyles.css
@@ -1,5 +1,6 @@
 .site {
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: 2fr 1fr 2fr;
   grid-gap: 2vh;
+  margin-bottom: 3.25rem;
 }
