--- a/src/components/Search/search_global_styles.css
+++ b/src/components/Search/search_global_styles.css
@@ -16,10 +16,16 @@
   margin-bottom: 2rem;
 }
 
-.well {
-  display: grid;
-  background-color: var(--header-bkgrd);
+.inner-grid-header {
+  text-align: center;
   color: #fff;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.well {
+  display: block;
+  background-color: var(--header-bkgrd);
   border-radius: 3px;
   padding: 0.25rem 0.125rem;
   box-shadow: inset 0 2px 3px rgba(10, 10, 10, 0.1);
@@ -104,6 +110,20 @@
 }
 
 @media screen and (min-width: 481px) {
+  .searchByCity-container {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    padding: 0 15px;
+  }
+
+  .searchByCuisine-container {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    padding: 0 15px;
+  }
+
   .search-header-spacer {
     margin-top: 0;
   }
@@ -119,9 +139,13 @@
   }
 
   .well {
-    padding: 1vh 15px 2vh;
-    overflow-y: none;
-    height: initial;
+    margin: 0;
+    padding: 0.5rem;
+    max-height: unset;
+    height: auto;
+    overflow-y: unset;
+    overflow-x: unset;
+    overflow-wrap: unset;
   }
 
   .inner-grid {
@@ -144,19 +168,19 @@
 
 @media screen and (min-width: 769px) {
   .well {
-    padding: 0 1.5vw 1.5vh;
-    overflow-y: none;
-    height: initial;
+    margin: 0;
+    padding: 0.5rem;
+    max-height: unset;
+    height: auto;
+    overflow-y: unset;
+    overflow-x: unset;
+    overflow-wrap: unset;
   }
 
   .inner-grid {
     display: grid;
     grid-template-columns: repeat(5, minmax(150px, 1fr));
     grid-gap: 0.5rem;
-  }
-
-  .searchBox-header {
-    padding-top: 0.25rem;
   }
 
   .icon-padding {
