--- a/src/index.css
+++ b/src/index.css
@@ -9538,9 +9538,4 @@ label.panel-block:hover {
     padding: 18rem 1.5rem;
   }
 }
-
-.footer {
-  background-color: #f6f6f6;
-  padding: 3rem 1.5rem 6rem;
-}
 /*# sourceMappingURL=bulma.css.map */
